# insanely-fast-whisper

./: pyproject.toml
src/insanely_fast_whisper/: cli.py  diarize_cli.py
