[project]
name = "insanely-fast-whisper"
version = "0.0.13-post2"
description = "An insanely fast whisper CLI"
authors = [
    { name = "Faiz Surani", email = "faiz@faizsurani.com" },
    { name = "VB", email = "reachvaibhavs10@gmail.com" },
    { name = "Patrick Arminio", email = "patrick.arminio@gmail.com" },
]
dependencies = [
    "click",
    "transformers",
    "optimum",
    "accelerate",
    "pyannote-audio>=3.1.0",
    "setuptools>=68.2.2",
    "rich>=13.7.0",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
insanely-fast-whisper = "insanely_fast_whisper.cli:main"
