[project]
name = "insanely-fast-diarize"
version = "0.0.13-post2"
description = "An insanely fast diarization CLI"
authors = [
    { name = "Amar Venugopal", email = "amarvenu@stanford.edu"},
    { name = "Faiz Surani", email = "faiz@faizsurani.com" },
    { name = "VB", email = "reachvaibhavs10@gmail.com" },
    { name = "Patrick Arminio", email = "patrick.arminio@gmail.com" },
]
dependencies = [
    "click",
    "optimum",
    "accelerate",
    "pyannote-audio==3.3.2",
    "setuptools>=68.2.2",
    "rich>=13.7.0",
]
requires-python = ">=3.8,<=3.12"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
insanely-fast-diarize = "insanely_fast_whisper.diarize_cli:main"
